--- a/src/views/ReactSolution/components/ResultTable.module.css
+++ b/src/views/ReactSolution/components/ResultTable.module.css
@@ -1,19 +1,19 @@
 .table {
   width: 100%;
   border-collapse: collapse;
-  border: 1px solid #444;
+  border: 1px solid var(--color-border);
 }
 
 .table th {
-  background-color: #444;
+  background-color: var(--color-border);
   color: white;
   padding: 0.5rem;
-  border: 1px solid #444;
+  border: 1px solid var(--color-border);
 }
 
 .table td {
   padding: 0.5rem;
-  border: 1px solid #444;
+  border: 1px solid var(--color-border);
 }
 
 .left {
